fixed z-index for popup

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -2,7 +2,7 @@ body
 	font-family: $Futuras 
 	color: rgba($black, 0.5) 
 	+f(20px,500,1.5)
-	min-width: 1440px
+	min-width: 1280px
 	+font-smoothing
 	letter-spacing: 0
 	background-color: $white
