--- a/src/sass/components/_popup.sass
+++ b/src/sass/components/_popup.sass
@@ -4,7 +4,7 @@
 	left: 0
 	width: 100%
 	height: 100%
-	z-index: 5
+	z-index: 6
 	padding: 30px
 	visibility: hidden
 	overflow: auto
